# jobsity

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
initdb/: create_database.sql
jobsity/: __init__.py  cli.py  logging.py
jobsity/app/: __init__.py  app.py  fake_trips.py  load_trips_app.py  read_trips_app.py  trips_by_bounding_box_app.py  trips_by_region_app.py
jobsity/conf/: logging_custom.json  logging_custom.yaml
jobsity/core/dao/: __init__.py  trips_dao.py
jobsity/core/dlo/: trips_dlo.py
jobsity/core/helpers/: path.py  query.py  show_data.py
jobsity/core/service/: database.py  kafka.py
jobsity/core/sql/: all.sql  answers.sql  insert_trip.sql  trips_by_bounding_box.sql  trips_by_region.sql
